# streaming-news-intelligence

./: .env.example  .gitignore  Makefile  README.md  SENSITIVE.md  prompt.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-infra.yml  pipeline.yml
backend/workers/: cleanup.py  firestore_client.py  firestore_writer.py  notifier.py  pipeline.py
infra/: firebase-deploy.sh  firestore.indexes.json  firestore.rules
infra/github-actions/: deploy-infra.yml
services/clustering/: cluster_builder.py  clusterer.py  embedder.py  run.py
services/ingestion/: cursor_store.py  gdelt_fetcher.py  guardian_fetcher.py  reddit_fetcher.py  rss_fetcher.py  run.py
services/processing/: deduplicator.py  filters.py  normalizer.py  run.py
services/ranking/: ranker.py  run.py  scorer.py
services/summarization/: event_builder.py  key_points.py  run.py  summarizer.py
shared/: config.py  geo_lookup.json  models.py  utils.py
tests/: test_clustering.py  test_firestore_writer.py  test_gdelt_fetcher.py  test_ingestion.py  test_notifier.py  test_processing.py  test_ranking.py  test_summarization.py
